Icons for monitoring quality points

--- a/public/static/locales/en/common.json
+++ b/public/static/locales/en/common.json
@@ -52,6 +52,7 @@
     "action-num": "#",
     "action-name-title": "Action theme",
     "action-impact": "Impact",
+    "action-monitoring": "Monitoring",
     "action-merged": "Merged actions",
     "action-status-merged": "Merged with action",
     "previous": "Previous",
