--- a/public/static/locales/fi/common.json
+++ b/public/static/locales/fi/common.json
@@ -52,6 +52,7 @@
     "action-num": "Nro",
     "action-name-title": "Toimenpide / Nimi",
     "action-impact": "Vaikutus",
+    "action-monitoring": "Seuranta",
     "action-merged": "Yhdistetyt toimenpiteet",
     "action-status-merged": "Yhdistetty toimenpiteeseen",
     "previous": "Edellinen",
